# ScrapBook

./: .gitignore  collide  collision_test.cpp  draw_tile_line.py  hash  hash_exercises.cpp  life.py  qs  quicksort.cpp  rec  recursion.cpp  recursion2.cpp  sort  sort.cpp  spiral.py  stack  stack.cpp  test.cpp
BTree-RS/: Cargo.toml
Boyer-Moore/: Cargo.toml
CF-12-30-23/: CMakeLists.txt  alg.hpp  main.cpp
CPP/: area_map.cpp  area_test  body_parts.cpp  body_parts.h  build.sh  camera.cpp  camera.h  config  ent_test  entitity.cpp  entity.cpp  event.cpp  event.h  file_handling.cpp  file_handling.h  main  main.cpp  mapgen.cpp  mapgen.h  notes.txt  outline.txt  rendering.cpp  rendering.h  rendertest  (+6 more)
Old/tile_engine/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  analysis.txt  main.cpp  massif.out.150148
Old/tile_engine/SDL/include/: event.hpp  rendering.hpp  timing.hpp
Old/tile_engine/SDL/src/: event.cpp  rendering.cpp  timing.cpp
Old/tile_engine/graphics/: cursors.xcf  font.xcf  shade_tiles.xcf  ship_tiles.xcf  universe_tiles.xcf
Old/tile_engine/include/: alg.hpp  entities.hpp  fixed_int.hpp  global_RNG.hpp  global_error.hpp  global_settings.hpp  materials.hpp  physics.hpp  physics_collision.hpp  physics_coordinates.hpp  scene.hpp  sprites.hpp  timer.hpp  world_drawing.hpp
Old/tile_engine/src/: alg.cpp  entities.cpp  global_RNG.cpp  global_error.cpp  global_settings.cpp  materials.cpp  physics_collision.cpp  physics_commands.cpp  physics_coordinates.cpp  physics_object_list.cpp  physics_object_list_movement.cpp  sprites.cpp  timer.cpp  world_drawing.cpp
(+28 files in other folders)
